[project]
name = "punbot"
version = "0.1.0"
description = "Manda giornalmente la media del PUN e dell'MGP su una chat Telegram."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler==3.10.4",
    "beautifulsoup4==4.12.3",
    "pydantic-settings==2.6.0",
    "python-telegram-bot==21.6",
    "requests==2.32.3",
    "types-beautifulsoup4==4.12.0.20241020",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportUnknownMemberType = false

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN1",   # Missing type self, cls (deprecated)
    "ANN204", # Missing type annotation for special method
    "D1",     # Missing docstring in public: module, class, method, function, package, magic method, nested class, init
    "D203",   # 1 blank line required before class docstring
    "D212",   # Multi-line docstring summary should start at the first line
    "DTZ",    # No Naive Datetime
    "TRY400", # Use logging.exception() instead of logging.error() for logging exceptions
]
